--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,7 @@ version: 2.2.1
 homepage: https://github.com/LiWenHui96
 repository: https://github.com/LiWenHui96/flutter_file_view
 issue_tracker: https://github.com/LiWenHui96/flutter_file_view/issues
+publish_to: none
 
 environment:
   sdk: ">=2.14.0 <3.0.0"
